--- a/templates/index.html
+++ b/templates/index.html
@@ -202,6 +202,28 @@
 	</div>
 </div>
 
+<!-- alumni acheivements -->
+<div class="instagram-feed-user text-center">
+	<div class="user-wrapper">
+		<span class="icon-instagram">
+			<i class="fab fa-instagram" aria-hidden="true"></i>
+		</span>
+	</div>
+</div>
+<div class="newsletter newsletter-parallax">
+	<div class="container">
+		<div class="newsletter-wrapper text-center">
+			<div class="newsletter-title">
+				<h2 class="heading-light">Alumni Acheivements</h2>
+				<p class="text-white">We are always delighted to be able to highlight the achievemnts of our Alumni. As them are the greatest asset of our institution. Some of the glorious achievements of our alumni is given here.</p>
+			</div>
+			 <div class="interview-see-story">
+                        <a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI ACHEIVEMENTS</a>
+              </div>
+          </div>
+      </div>
+  </div>
+
 <!-- Placement Broshure -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
