--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,7 @@ html,body {
 
 .newsletter{
   padding: 135px 0 115px;
-  background: url(img/mac.png) no-repeat;
+  background: url(mac.png) no-repeat;
   background-size: cover;
   height: 70%;
 }
