--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Daksha</a>
-          <a class="dropdown-item" href="#">Invento</a>
+          <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
           <a class="dropdown-item" href="#">Eterno</a>
 
          
