--- a/static/css/invento.css
+++ b/static/css/invento.css
@@ -3,6 +3,7 @@
 }
 #invento{
 	margin-top: 30px;
+	margin-bottom: 30px;
 	font-family: 'Rajdhani', sans-serif;
 	font-size: 20px;
 	font-weight: 700;
@@ -14,7 +15,7 @@
 }
 .carousel-inner img {
       width: 100%;
-      height: 100%;
+      height: 70%;
 }
 footer {
   background-color: #3f3f3f;
@@ -65,3 +66,8 @@ hr.last {
   padding-top: 2px;
   padding-bottom: 2px;
  }
+ .carousel-inner img {
+      width: 100%;
+      height: 40%;
+}
+}
