--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
           Events
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Daksha</a>
+          <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
           <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
           <a class="dropdown-item" href="#">Eterno</a>
 
