--- a/mainapp/templates/daksha/daksha.html
+++ b/mainapp/templates/daksha/daksha.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" 
-                   data-image="{% static 'images/daksha13.jpg' %}"
+                   data-image="{% static 'images/daksha13.jpeg' %}"
                    data-target="#image-gallery">
                     <img class="img-thumbnail"
                          src="{% static 'images/daksha13.jpeg' %}"
@@ -160,7 +160,7 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" 
-                   data-image="{% static 'images/daksha14.jpg' %}"
+                   data-image="{% static 'images/daksha14.jpeg' %}"
                    data-target="#image-gallery">
                     <img class="img-thumbnail"
                          src="{% static 'images/daksha14.jpeg' %}"
@@ -178,7 +178,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" 
-                   data-image="{% static 'images/daksha15.jpg' %}"
+                   data-image="{% static 'images/daksha15.jpeg' %}"
                    data-target="#image-gallery">
                     <img class="img-thumbnail"
                          src="{% static 'images/daksha15.jpeg' %}"
