--- a/mainapp/templates/daksha/daksha.html
+++ b/mainapp/templates/daksha/daksha.html
@@ -25,10 +25,10 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="#About">About</a>
+      <a class="nav-link" href="/#About">About</a>
       </li>
       <li class="nav-item">
       <a class="nav-link" href="#achievements">Achievements</a>
@@ -38,8 +38,8 @@
           Events
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Daksha</a>
-          <a class="dropdown-item" href="#">Invento</a>
+          <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
+          <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
           
 
          
