--- a/mainapp/templates/invento/invento.html
+++ b/mainapp/templates/invento/invento.html
@@ -24,10 +24,10 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="#About">About</a>
+      <a class="nav-link" href="/#About">About</a>
       </li>
       <li class="nav-item">
       <a class="nav-link" href="#achievements">Achievements</a>
@@ -37,7 +37,7 @@
           Events
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Daksha</a>
+          <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
           <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
           
 
