--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
           Events
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Daksha</a>
-          <a class="dropdown-item" href="#">Invento</a>
+          <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
+          <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
           <a class="dropdown-item" href="#">Eterno</a>
 
          
@@ -218,7 +218,7 @@ Homecoming Never Gets Old										</p>
 				<p class="text-white">We are always delighted to be able to highlight the achievemnts of our Alumni. As them are the greatest asset of our institution. Some of the glorious achievements of our alumni is given here.</p>
 			</div>
 			 <div class="interview-see-story">
-                        <a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI ACHEIVEMENTS</a>
+                        <a href="{%url 'Achievements' %}" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI ACHEIVEMENTS</a>
               </div>
           </div>
       </div>
@@ -241,7 +241,7 @@ Homecoming Never Gets Old										</p>
 			<img class="card-img-top" src="{% static 'images/placement.jpg' %}">
 			<div class="card-body">
 				<p class="card-text">Take a look at our placement brochure.</p>
-				<a href="{% static 'images/Alumni_brochure.pdf' %}" class="btn btn-outline-secondary" download>Download</a>
+				<a href="{% static 'images/Alumni_brochuree.pdf' %}" class="btn btn-outline-secondary" download>Download</a>
 			</div>
 		</div>
 	</div>
