--- a/mainapp/templates/mainapp/register1.html
+++ b/mainapp/templates/mainapp/register1.html
@@ -16,9 +16,10 @@
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 	<link rel="icon" href="{% static 'images/alumin.jpg' %}">
 	
-
+  <!-- <script src="{% static 'js/registration.js' %}"></script> -->
+  <!-- <script src="{% static 'js/reg1.js' %}"></script> -->
 	<script src="{% static 'js/reg.js' %}"></script>
-	<script src="{% static 'js/reg1.js' %}"></script>
+
 </head>
 <body background="{% static 'css/form.JPG' %}">
   <form method="post"  class="simple-form">
