--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
                         <p class="light">We bring in front of you succssful stories and experiences of our reputed alumni. Here we share alumni stories which could prove to be a great inspiration for our students.</p>
                     </div>
                     <div class="interview-see-story">
-                        <a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI STORIES</a>
+                        <a href="{%url 'Story' %}" class="btn btn-outline-warning see-story bnt text-uppercase">SEE ALUMNI STORIES</a>
                     </div>
                 </div>
             </div>
