--- a/mainapp/templates/stories/Alumni_Stories.html
+++ b/mainapp/templates/stories/Alumni_Stories.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 	<title>Alumni Stories</title>
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="an"nymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="Alumni-Stories.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/Alumni-Stories.css' %}">
 </head>
 <body>
 	<header>
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
       	<li class="nav-item active">
-      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="/">Home</a>
   		</li>
      
    
