--- a/mainapp/templates/stories/Alumni_Stories.html
+++ b/mainapp/templates/stories/Alumni_Stories.html
@@ -85,7 +85,7 @@ I think It has included the course certification and all which are good. But one
 Believe in yourself,work hard in the right way. You will definitely win. </p>
 </div>
 <div class="next">
-	<a href="#" class="btn btn-outline-warning see-story bnt text-uppercase">Next Story</a>
+	<a href="{% url 'Story01' %}" class="btn btn-outline-warning see-story bnt text-uppercase">Next Story</a>
 </div>
 </div>
 </div>
