--- a/mainapp/templates/stories/Alumni_Stories1.html
+++ b/mainapp/templates/stories/Alumni_Stories1.html
@@ -40,7 +40,7 @@
 	<div class="story-single">
 		<div class="area-title">
 			<div class="container">
-				<h2 class="heading-regular">Story Of Shastra Robotics</h2>
+				<h2 class="heading-regular">Story Of Sastra Robotics</h2>
 			</div>
 		</div>
 		<div class="story-content">
