--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
           <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
-          <a class="dropdown-item" href="#">Eterno</a>
+          <a class="dropdown-item" href="#eterno">Eterno</a>
 
          
       </li>
@@ -139,7 +139,7 @@
 <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-lg-6">
-			<h1>About Eterno</h1>
+			<h1 id="eterno">About Eterno</h1>
 		</div>
 		<br>
 		<br>
