--- a/mainapp/templates/invento/invento.html
+++ b/mainapp/templates/invento/invento.html
@@ -41,6 +41,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{%url 'Daksha' %}">Daksha</a>
           <a class="dropdown-item" href="{%url 'Invento' %}">Invento</a>
+          <a class="dropdown-item" href="/#eterno">Eterno</a>
           
 
          
